# Ambigram

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  count_support.cpp  countsupport.cpp  environment.yml  juncdb.cpp  localhap.cpp  readme.md  varplace.cpp
debug/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: Edge.hpp  Exceptions.hpp  Graph.hpp  HaploidProfile.hpp  Junction.hpp  JunctionDB.hpp  List.hpp  LocalGenomicMap.hpp  LocusDB.hpp  LongFragmentSupportDB.hpp  Record.hpp  SVprofile.hpp  Segment.hpp  SegmentDB.hpp  SupportProfile.hpp  Vertex.hpp  Weight.hpp  cxxopts.hpp
script/: alignment.sh  bfb_scripts.py  bpsmap.py  compare.py  config.py  e_size.py  generate_seg.py  junc.db  list  main.py  parseILP.py  process_barcode.py  seek.sh  sim_true_haps.py  simu.py  simulation.sh  surtotxt.py  test.lh  vcf2txt.sh
src/: Edge.cpp  Exceptions.cpp  Graph.cpp  HaploidProfile.cpp  Junction.cpp  JunctionDB.cpp  LocalGenomicMap.cpp  LocusDB.cpp  Record.cpp  SVprofile.cpp  Segment.cpp  SegmentDB.cpp  SupportProfile.cpp  Vertex.cpp  Weight.cpp
