cmake_minimum_required(VERSION 3.10)
project(localHapHpv)

set(CMAKE_FIND_DEBUG_MODE TRUE)
set(CMAKE_CXX_COMPILER g++)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_BUILD_TYPE DEBUG)
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXX_FLAGS} -O0 -Wall -ggdb -fkeep-inline-functions")
set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 ")
# set(seqGraph_DIR /home/caronkey/.apps/localLibs/share/seqGraph/cmake)
# find_package(seqGraph REQUIRED)
aux_source_directory(./src LOCAL_HAP_SRC)
include_directories(${PROJECT_SOURCE_DIR}/include)
# include_directories(/home/eric/miniconda3/include)
add_executable(Ambigram localhap.cpp ${LOCAL_HAP_SRC})

# target_link_libraries(localHap -lCbcSolver -lCbc -lOsi -lOsiCbc -lCgl -lOsiClp -lClp -lCoinUtils -llapack -lbz2 -lz -lhts)
# target_link_libraries(Ambigram /home/eric/miniconda3/lib/libCbcSolver.so /home/eric/miniconda3/lib/libCbc.so /home/eric/miniconda3/lib/libOsi.so /home/eric/miniconda3/lib/libOsiCbc.so /home/eric/miniconda3/lib/libCgl.so /home/eric/miniconda3/lib/libOsiClp.so /home/eric/miniconda3/lib/libClp.so /home/eric/miniconda3/lib/libCoinUtils.so /home/eric/miniconda3/lib/liblapack.so -lz -lhts)
if (NOT $ENV{CONDA_PREFIX} STREQUAL "")
    message(STATUS "CURRENT CONDA PREFIX: $ENV{CONDA_PREFIX}")
    include_directories($ENV{CONDA_PREFIX}/include)
    link_directories($ENV{CONDA_PREFIX}/lib)
    target_link_libraries(Ambigram $ENV{CONDA_PREFIX}/lib/libCbcSolver.so $ENV{CONDA_PREFIX}/lib/libCbc.so $ENV{CONDA_PREFIX}/lib/libOsi.so $ENV{CONDA_PREFIX}/lib/libOsiCbc.so $ENV{CONDA_PREFIX}/lib/libCgl.so $ENV{CONDA_PREFIX}/lib/libOsiClp.so $ENV{CONDA_PREFIX}/lib/libClp.so $ENV{CONDA_PREFIX}/lib/libCoinUtils.so $ENV{CONDA_PREFIX}/lib/liblapack.so $ENV{CONDA_PREFIX}/lib/libz.so $ENV{CONDA_PREFIX}/lib/libhts.so)
endif ()
install(TARGETS Ambigram DESTINATION bin)
